--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-screens": "^2.0.0-alpha.3",
+    "react-navigation": "^4.0.3",
+    "react-navigation-stack": "^1.6.0",
     "reactotron-react-native": "^3.6.5"
   },
   "devDependencies": {
