--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "global": "^4.4.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^2.0.0-alpha.3",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.3",
     "react-navigation-stack": "^1.6.0",
-    "reactotron-react-native": "^3.6.5"
+    "reactotron-react-native": "^3.6.5",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
